Fix button block being styled like non-styling button on iOS
Remove comments from normalize.css

--- a/sass/components/blocks/_editor.scss
+++ b/sass/components/blocks/_editor.scss
@@ -20,20 +20,3 @@
 	font-family: var(--font-sans);
 	@extend h1;
 }
-
-.wp-block-button__link {
-	background: var(--color-accent);
-	color: #fff;
-	border-radius: .25rem;
-	border: none;
-	padding: .75rem 1rem;
-	cursor: pointer;
-	line-height: 1;
-	font-size: var(--text-sm);
-	font-weight: 700;
-
-	&:hover {
-		text-decoration: none;
-		opacity: .75;
-	}
-}
