--- a/sass/components/blocks/_style.scss
+++ b/sass/components/blocks/_style.scss
@@ -60,6 +60,3 @@
 .wp-block-button {
 	margin-bottom: 1.5em;
 }
-.wp-block-button__link {
-	@extend button;
-}
